--- a/templates/index.html
+++ b/templates/index.html
@@ -23,17 +23,17 @@
           <div class="cenfo-videos-row">
             <section class="cenfo-video-block">
               <h2 class="cenfo-section-title">Imagen original</h2>
-              <img src="http://192.168.1.38:81/" class="cenfo-video" alt="Imagen original"></img>
+              <img src="http://192.168.0.78:81/" class="cenfo-video" alt="Imagen original">
             </section>
             <section class="cenfo-video-block">
               <h2 class="cenfo-section-title">Imagen ajustada</h2>
-              <video controls src="http://192.168.1.38:81" poster="preview2.jpg" class="cenfo-video"></video>
+              <img src="http://192.168.0.78:81/" class="cenfo-video" alt="Imagen ajustada">
             </section>
           </div>
           <div class="cenfo-videos-row">
             <section class="cenfo-video-block">
               <h2 class="cenfo-section-title">Imagen del juzgamiento</h2>
-              <video controls src="video3.mp4" poster="preview3.jpg" class="cenfo-video"></video>
+              <img src="http://192.168.0.78:81/" class="cenfo-video" alt="Imagen del juzgamiento">
             </section>
           </div>
         </div>
@@ -124,6 +124,7 @@
     <footer class="cenfo-footer">
       <p class="cenfo-footer-text">&copy; 2025 Universidad Cenfotec | Escuela de Ingeniería del Software</p>
     </footer>
+    <script src="../static/js/script.js"></script>
   </body>
 </html>
 
